# course_work_4.1

./: README.md  config.py  main.py  pyproject.toml
data/: vacancies.json
src/: get_vacancies.py  hh_api.py  json_saver.py  saver.py  utils.py  vacancies.py  vacancy.py
tests/: conftest.py  test_vacancy.py
