[tool.poetry]
name = "course-work-4-1"
version = "0.1.0"
description = ""
authors = ["admin <codenamekirkpatrick@yandex.ru>"]
readme = "README.md"
packages = [{include = "course_work_4"}]

[tool.poetry.dependencies]
python = "3.11.7"
pytest = "^8.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
